# z80-compiler-suite-workspace

./: .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md
tasks/: gap-analysis-37B.md  gap-analysis-session11.md  lessons.md  prompts.md  qr-code-investigation.md  session12-summary.md  session13-summary.md  todo.md
tinypi-2024-11-04/: Makefile  pi.sha1sum  readme.txt  tinypi.c
